--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,5 +2,17 @@ body{
 
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    color: rgb(233, 61, 61);
+    color: rgb(0, 0, 0);
+}
+#container{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+
+}
+#container h1{
+    font-size: 20px;
+
 }
