--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,10 @@ body{
 
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 16px;
     color: rgb(0, 0, 0);
+    margin: 0;
+    padding: 0;
 }
 #container{
     width: 70%;
