--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body{
 
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Courier;
     font-size: 16px;
     color: rgb(0, 0, 0);
     margin: 0;
