--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,21 +1,27 @@
 body{
-
+    background: rgb(136, 136, 136);
+    color: rgb(0, 0, 0);
     text-align: center;
     font-family: Arial;
     font-size: 16px;
-    color: rgb(0, 0, 0);
     margin: 0;
     padding: 0;
+   
+    
 }
 
 #cabecera{
-    background: rgb(255, 0, 0);
+    background: rgb(253, 0, 0);
     box-shadow:  0px 2px 20px 0px rgba(0, 0, 0, 0.5);
     color: antiquewhite;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em ;
     font-weight: bold;
 }
+#cabecera #logo{
+    width: 20px;
+    vertical-align: middle;
+}   
 #cabecera #tagline{
     padding: 0 0 0 1em;
     font-weight: normal;
@@ -35,6 +41,8 @@ body{
 
 }
 
-#post{
+#post
+{
+    background: white;
     padding: 1em;
 }
