--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,3 +38,13 @@ body{
 #post{
     padding: 1em;
 }
+
+#footer{
+    background: #008000;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}	
+
+
+
